# flint-lang

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
compiler/: Cargo.toml
compiler/src/: ast.rs  lexer.rs  parser.rs  typechecker.rs
docs/: api.md  install.md  spec.md
examples/: async_example.flint  hello_world.flint
runtime/: Cargo.toml
runtime/src/: actor.rs  async_runtime.rs  channel.rs  lib.rs  task.rs
stdlib/ai/: agent.rs  client.rs  embeddings.rs  lib.rs  prompt.rs  streaming.rs  tools.rs
stdlib/auth/: mod.rs
stdlib/crypto/: mod.rs
stdlib/db/: mod.rs
stdlib/enterprise/: deploy.rs  di.rs  logging.rs  metrics.rs  mod.rs  tracing.rs  workspace.rs
stdlib/env/: mod.rs
stdlib/fs/: mod.rs
stdlib/http/: client.rs  middleware.rs  mod.rs  request.rs  response.rs  router.rs  server.rs
stdlib/jobs/: mod.rs
stdlib/json/: mod.rs
stdlib/log/: mod.rs
stdlib/metrics/: mod.rs
stdlib/orm/: mod.rs
stdlib/security/: encryption.rs  mod.rs  ownership.rs  permissions.rs  sandbox.rs
stdlib/test/: assertions.rs  mod.rs  runner.rs
stdlib/ui/: component.rs  events.rs  mod.rs  state.rs  style.rs  vdom.rs  webview.rs
stdlib/ws/: mod.rs
tools/fmt/: Cargo.toml
tools/fmt/src/: main.rs
tools/lint/: Cargo.toml
tools/lsp/: Cargo.toml
tools/pkg/: Cargo.toml
tools/repl/: Cargo.toml
vm/: Cargo.toml
vm/src/: bytecode.rs  compiler.rs  frame.rs  gc.rs  lib.rs  value.rs  vm.rs
vscode-extension/: language-configuration.json  package.json
vscode-extension/snippets/: flint.code-snippets
vscode-extension/src/: extension.ts
(+11 files in other folders)
